# x/rewards/types/events.go
@@ -2,7 +2,6 @@ package types
 
 const (
 	EventTypeEpochFinalized     = "epoch_finalized"
-	EventTypeClaimRewards       = "reward_claimed"
 	EventTypeParamsUpdateQueued = "params_update_queued"
 	EventTypeParamsActivated    = "params_activated"
 	EventTypePaused             = "rewards_paused"
@@ -11,13 +10,8 @@ const (
 )
 
 const (
-	AttributeKeySigner             = "signer"
-	AttributeKeySlotID             = "slot_id"
-	AttributeKeyStartEpoch         = "start_epoch"
-	AttributeKeyEndEpoch           = "end_epoch"
 	AttributeKeyAmount             = "amount"
 	AttributeKeyPayoutAddress      = "payout_address"
-	AttributeKeyPayoutCount        = "payout_count"
 	AttributeKeyAuthority          = "authority"
 	AttributeKeyEpoch              = "epoch"
 	AttributeKeyStartHeight        = "start_height"
